checkbox for showing file names with path

--- a/templates/files-in-same-commit-graph.html
+++ b/templates/files-in-same-commit-graph.html
@@ -46,53 +46,53 @@
 const graph = {
 /*data_placeholder*/
     "nodes": [
-        {"name": "MyArtifactRepository.java", "group": 1},
-        {"name": "AbstractGradleUserProjectChange.java", "group": 1},
-        {"name": "MavenExternalParameters.java", "group": 1},
-        {"name": "resource.h", "group": 1},
-        {"name": "MavenArtifactResolvedM2RtMarker.java", "group": 1},
-        {"name": "PsiResolveHelperImpl.java", "group": 1},
-        {"name": "WinLauncher.vcxproj.filters", "group": 1},
-        {"name": "GradleLocalSettings.java", "group": 1},
-        {"name": "HgUpdateToDialog.java", "group": 1},
-        {"name": "modules.xml", "group": 1},
-        {"name": "GraphInferencePolicy.java", "group": 1},
-        {"name": "ProcessCandidateParameterTypeInferencePolicy.java", "group": 1},
-        {"name": "MavenArtifactResolvedM3RtMarker.java", "group": 1},
-        {"name": "ExtensionPointCandidate.java", "group": 1},
-        {"name": "GradleUserProjectChange.java", "group": 1},
-        {"name": "WinLauncher.cpp", "group": 1},
-        {"name": "NameUtilTest.java", "group": 1},
-        {"name": "components.xml", "group": 1},
-        {"name": "IconResourceInjector.java", "group": 1},
-        {"name": "MavenModuleMap.java", "group": 1},
-        {"name": "ToolWindowHeadlessManagerImpl.java", "group": 1},
-        {"name": "GroovyAnnotator.java", "group": 1},
-        {"name": "MavenRunnerParametersConfigurable.form", "group": 1},
-        {"name": "GroovyHighlightingTest.groovy", "group": 1},
-        {"name": "layouts.gant", "group": 1},
-        {"name": "MinusculeMatcher.java", "group": 1},
-        {"name": "LauncherGeneratorMain.java", "group": 1},
-        {"name": "LauncherGenerator.java", "group": 1},
-        {"name": "EncodingUtil.java", "group": 1},
-        {"name": "JavaFxPsiUtil.java", "group": 1},
-        {"name": "WinLauncher.vcxproj", "group": 1},
-        {"name": "GradleUserProjectChangesCalculator.java", "group": 1},
-        {"name": "maven-artifact-resolver-m2.iml", "group": 1},
-        {"name": "JavaFXHighlightingTest.java", "group": 1},
-        {"name": "ToolWindow.java", "group": 1},
-        {"name": "MyArtifactResolver.java", "group": 1},
-        {"name": "GroovyBundle.properties", "group": 1},
-        {"name": "MavenRunnerParameters.java", "group": 1},
-        {"name": "MavenRunnerParametersConfigurable.java", "group": 1},
-        {"name": "maven.iml", "group": 1},
-        {"name": "EncodingProjectManagerImpl.java", "group": 1},
-        {"name": "WinLauncher.rc", "group": 1},
-        {"name": "MyWorkspaceReader.java", "group": 1},
-        {"name": "MavenUtil.java", "group": 1},
-        {"name": "RegisterExtensionFix.java", "group": 1},
-        {"name": "HgMergeDialog.java", "group": 1},
-        {"name": "maven-artifact-resolver-m3.iml", "group": 1}
+        {"name": "/src/MyArtifactRepository.java", "group": 1},
+        {"name": "/src/AbstractGradleUserProjectChange.java", "group": 1},
+        {"name": "/src/MavenExternalParameters.java", "group": 1},
+        {"name": "/src/resource.h", "group": 1},
+        {"name": "/src/MavenArtifactResolvedM2RtMarker.java", "group": 1},
+        {"name": "/src/PsiResolveHelperImpl.java", "group": 1},
+        {"name": "/src/WinLauncher.vcxproj.filters", "group": 1},
+        {"name": "/src/GradleLocalSettings.java", "group": 1},
+        {"name": "/src/HgUpdateToDialog.java", "group": 1},
+        {"name": "/src/modules.xml", "group": 1},
+        {"name": "/src/GraphInferencePolicy.java", "group": 1},
+        {"name": "/src/ProcessCandidateParameterTypeInferencePolicy.java", "group": 1},
+        {"name": "/src/MavenArtifactResolvedM3RtMarker.java", "group": 1},
+        {"name": "/src/ExtensionPointCandidate.java", "group": 1},
+        {"name": "/src/GradleUserProjectChange.java", "group": 1},
+        {"name": "/src/WinLauncher.cpp", "group": 1},
+        {"name": "/src/NameUtilTest.java", "group": 1},
+        {"name": "/src/components.xml", "group": 1},
+        {"name": "/src/IconResourceInjector.java", "group": 1},
+        {"name": "/src/MavenModuleMap.java", "group": 1},
+        {"name": "/src/ToolWindowHeadlessManagerImpl.java", "group": 1},
+        {"name": "/src/GroovyAnnotator.java", "group": 1},
+        {"name": "/src/MavenRunnerParametersConfigurable.form", "group": 1},
+        {"name": "/src/GroovyHighlightingTest.groovy", "group": 1},
+        {"name": "/src/layouts.gant", "group": 1},
+        {"name": "/src/MinusculeMatcher.java", "group": 1},
+        {"name": "/src/LauncherGeneratorMain.java", "group": 1},
+        {"name": "/src/LauncherGenerator.java", "group": 1},
+        {"name": "/src/EncodingUtil.java", "group": 1},
+        {"name": "/src/JavaFxPsiUtil.java", "group": 1},
+        {"name": "/src/WinLauncher.vcxproj", "group": 1},
+        {"name": "/src/GradleUserProjectChangesCalculator.java", "group": 1},
+        {"name": "/src/maven-artifact-resolver-m2.iml", "group": 1},
+        {"name": "/src/JavaFXHighlightingTest.java", "group": 1},
+        {"name": "/src/ToolWindow.java", "group": 1},
+        {"name": "/src/MyArtifactResolver.java", "group": 1},
+        {"name": "/src/GroovyBundle.properties", "group": 1},
+        {"name": "/src/MavenRunnerParameters.java", "group": 1},
+        {"name": "/src/MavenRunnerParametersConfigurable.java", "group": 1},
+        {"name": "/src/maven.iml", "group": 1},
+        {"name": "/src/EncodingProjectManagerImpl.java", "group": 1},
+        {"name": "/src/WinLauncher.rc", "group": 1},
+        {"name": "/src/MyWorkspaceReader.java", "group": 1},
+        {"name": "/src/MavenUtil.java", "group": 1},
+        {"name": "/src/RegisterExtensionFix.java", "group": 1},
+        {"name": "/src/HgMergeDialog.java", "group": 1},
+        {"name": "/src/maven-artifact-resolver-m3.iml", "group": 1}
     ],
     "links": [
         {"source": 41, "target": 30, "value": 7},
@@ -161,6 +161,7 @@ function createForcesGraphOn(elementId, graph) {
         height = 700;
 
     var color = d3.scale.category20();
+    var showLongFileNames = false;
 
     var force = d3.layout.force()
             .charge(-120)
@@ -218,7 +219,7 @@ function createForcesGraphOn(elementId, graph) {
             .style("fill", function (d) { return color(d.group); })
             .call(force.drag)
             .on("mouseover", function(d) {
-                tooltip.html(d.name)
+                tooltip.html(showLongFileNames ? d.name : dropPath(d.name))
                         .style("opacity", .9)
                         .style("position", "absolute")
                         .style("left", svgPos.left + parseInt(d.x + 18) + "px")
@@ -229,7 +230,7 @@ function createForcesGraphOn(elementId, graph) {
             })
             .on("click", function (d) {
                 var connectedNodes = graph.nodes.filter(function(eachNode) { return quickFind.areConnected(eachNode.index, d.index); });
-                updateSelection(connectedNodes);
+                updateSelection(connectedNodes, showLongFileNames);
 
                 handledByNode = true;
             });
@@ -238,7 +239,7 @@ function createForcesGraphOn(elementId, graph) {
             handledByNode = false;
             return;
         }
-        updateSelection([]);
+        updateSelection([], showLongFileNames);
     });
 
     force.on("tick", function () {
@@ -250,15 +251,26 @@ function createForcesGraphOn(elementId, graph) {
                 .attr("cy", function (d) { return d.y; });
     });
 
+    var footerSpan = appendBlockElementTo(rootElement, width);
+    var span = footerSpan.append("span").style({float: "right"});
+    span.append("label").html("Show long file names:");
+    span.append("input").attr("type", "checkbox")
+        .on("click", function() { showLongFileNames = !showLongFileNames; });
 
-    function updateSelection(selectedNodes) {
+
+    function updateSelection(selectedNodes, showLongFileNames) {
         graph.nodes.forEach(function (eachNode) { eachNode.selected = false; });
         selectedNodes.forEach(function (eachNode) { eachNode.selected = true; });
         node.data(graph.nodes).attr("r", function(d){ return d.selected ? 7 : 5; });
 
         selectedNodesLabel
-                .html(selectedNodes.map(function (d) { return d.name; }).sort().join("<br/>"))
+                .html(selectedNodes.map(function (d) { return showLongFileNames ? d.name : dropPath(d.name); }).sort().join("<br/>"))
                 .style("opacity", (selectedNodes.length > 0 ? 1 : 0));
+    }
+
+    function dropPath(fileName) {
+        var i = fileName.lastIndexOf("/");
+        return (i == -1) ? fileName : fileName.substring(i + 1)
     }
 
     function appendBlockElementTo(element, width) {
