--- a/templates/files-in-same-commit-graph.html
+++ b/templates/files-in-same-commit-graph.html
@@ -142,7 +142,7 @@ function createForcesGraphOn(elementId, graph) {
             this.connections[i] = i;
         }
     }
-    QuickFind.prototype.connect =  function(p1, p2) {
+    QuickFind.prototype.connect = function(p1, p2) {
         var p1Root = this.rootOf(this.connections[p1]);
         var p2Root = this.rootOf(this.connections[p2]);
         for (var i = 0; i < this.connections.length; i++) {
@@ -152,6 +152,43 @@ function createForcesGraphOn(elementId, graph) {
     QuickFind.prototype.rootOf = function(p) { return this.connections[p] == p ? p : this.rootOf(this.connections[p]); };
     QuickFind.prototype.areConnected = function(p1, p2) { return this.connections[p1] == this.connections[p2]; };
 
+    function GraphEditor(graph) {
+        this.graph = graph;
+        this.actions = [];
+    }
+    GraphEditor.prototype.remove = function(node) {
+        var nodeIndex = this.graph.nodes.indexOf(node);
+        var linksToRemove = this.graph.links.filter(function(link) { return link.source == node || link.target == node; });
+
+        var graphLinks = this.graph.links;
+        var linkEntries = linksToRemove.map(function (link) {
+            return {index: graphLinks.indexOf(link), link: link};
+        }).sort(function (a, b) { return a.index - b.index; });
+        this.actions.push({nodeIndex: nodeIndex, node: node, links: linkEntries});
+
+        this.graph.nodes = this.graph.nodes.filter(function(eachNode) { return eachNode != node; });
+        this.graph.links = this.graph.links.filter(function(link) { return linksToRemove.indexOf(link) == -1; });
+        this.graph.links.forEach(function(link) {
+            if (link.source.index >= nodeIndex) link.source.index -= 1;
+            if (link.target.index >= nodeIndex) link.target.index -= 1;
+        });
+    };
+    GraphEditor.prototype.undoAll = function () {
+        while (this.actions.length > 0) {
+            var action = this.actions.pop();
+
+            this.graph.nodes = this.graph.nodes.concat([action.node]);
+            action.node.index = this.graph.nodes.length - 1;
+
+            var graphNodes = this.graph.nodes;
+            var graphLinks = this.graph.links;
+            this.graph.links = this.graph.links.concat(action.links.map(function(it) { return it.link; }))
+            action.links.forEach(function (entry) {
+                if (entry.link.source.index == action.nodeIndex) entry.link.source.index = graphNodes.length - 1;
+                if (entry.link.target.index == action.nodeIndex) entry.link.target.index = graphNodes.length - 1;
+            });
+        }
+    };
 
     var width = 1100,
         height = 700;
@@ -181,13 +218,13 @@ function createForcesGraphOn(elementId, graph) {
             .links(graph.links)
             .start();
 
+    var graphEditor = new GraphEditor(graph);
+
     var link = svg.selectAll(".link")
             .data(graph.links)
             .enter().append("line")
             .attr("class", "link")
-            .style("stroke-width", function (d) {
-                return Math.sqrt(d.value);
-            });
+            .style("stroke-width", function (d) { return Math.sqrt(d.value); });
 
     var tooltip = rootElement.append("div")
             .attr("class", "tooltip")
@@ -224,19 +261,13 @@ function createForcesGraphOn(elementId, graph) {
             .on("mouseout", function(d) {
                 tooltip.style("opacity", .0);
             })
-            .on("click", function (d) {
+            .on("click", function (node) {
                 var shouldRemoveNode = d3.event.altKey;
                 if (shouldRemoveNode) {
                     updateSelection([], showLongFileNames);
                     tooltip.style("opacity", .0);
 
-                    var i = graph.nodes.indexOf(d);
-                    graph.nodes = graph.nodes.filter(function(node) { return node != d; });
-                    graph.links = graph.links.filter(function(link) { return link.source != d && link.target != d; });
-                    graph.links.forEach(function(link) {
-                        if (link.source.index >= i) link.source.index -= 1;
-                        if (link.target.index >= i) link.target.index -= 1;
-                    });
+                    graphEditor.remove(node);
 
                     svg.selectAll(".node").data(graph.nodes).exit().remove();
                     svg.selectAll(".link").data(graph.links).exit().remove();
@@ -248,7 +279,7 @@ function createForcesGraphOn(elementId, graph) {
                         // "index" property is added by d3js force layout
                         quickFind.connect(link.source.index, link.target.index);
                     });
-                    var connectedNodes = graph.nodes.filter(function(eachNode) { return quickFind.areConnected(eachNode.index, d.index); });
+                    var connectedNodes = graph.nodes.filter(function(eachNode) { return quickFind.areConnected(eachNode.index, node.index); });
                     updateSelection(connectedNodes, showLongFileNames);
                 }
 
@@ -264,11 +295,11 @@ function createForcesGraphOn(elementId, graph) {
 
     force.on("tick", function () {
         link.attr("x1", function (d) { return d.source.x; })
-                .attr("y1", function (d) { return d.source.y; })
-                .attr("x2", function (d) { return d.target.x; })
-                .attr("y2", function (d) { return d.target.y; });
+            .attr("y1", function (d) { return d.source.y; })
+            .attr("x2", function (d) { return d.target.x; })
+            .attr("y2", function (d) { return d.target.y; });
         node.attr("cx", function (d) { return d.x; })
-                .attr("cy", function (d) { return d.y; });
+            .attr("cy", function (d) { return d.y; });
     });
 
 
@@ -285,6 +316,8 @@ function createForcesGraphOn(elementId, graph) {
         dropDown.append("option").attr("value", i).html(i);
     }
     dropDown.on("change", function() {
+        graphEditor.undoAll();
+
         var quickFind = new QuickFind(graph.nodes.length);
         graph.links.forEach(function (link) {
             // "index" property is added by d3js force layout
@@ -304,18 +337,25 @@ function createForcesGraphOn(elementId, graph) {
             exploredNodes = exploredNodes.concat(connectedNodes);
         });
 
-        nodesToRemove.forEach(function (d) {
-            var i = graph.nodes.indexOf(d);
-            graph.nodes = graph.nodes.filter(function(node) { return node != d; });
-            graph.links = graph.links.filter(function(link) { return link.source != d && link.target != d; });
-            graph.links.forEach(function(link) {
-                if (link.source.index >= i) link.source.index -= 1;
-                if (link.target.index >= i) link.target.index -= 1;
-            });
-        });
+        nodesToRemove.forEach(function(node) { graphEditor.remove(node); });
+//        console.log(nodesToRemove);
 
-        svg.selectAll(".node").data(graph.nodes).exit().remove();
+        svg.selectAll(".link")
+                .data(graph.links)
+                .enter().append("line")
+                .attr("class", "link")
+                .style("stroke-width", function (d) { return Math.sqrt(d.value); });
         svg.selectAll(".link").data(graph.links).exit().remove();
+        link = svg.selectAll(".link");
+
+        svg.selectAll(".node").data(graph.nodes).enter().append("circle")
+                .attr("class", "node")
+                .attr("r", function(d){ return d.selected ? 7 : 5; })
+                .style("fill", function (d) { return color(d.group); })
+                .call(force.drag);
+        svg.selectAll(".node").data(graph.nodes).exit().remove();
+        node = svg.selectAll(".node");
+
         force.nodes(graph.nodes).links(graph.links).start();
     });
 
