--- a/templates/files-in-same-commit-graph.html
+++ b/templates/files-in-same-commit-graph.html
@@ -261,41 +261,36 @@ function createForcesGraphOn(elementId, graph) {
                 .style("left", function (){ return svgPos.left + (svgPos.width / 2) - (this.offsetWidth / 2) + "px"; });
 
     var handledByNode = false;
-    var nodeElements = svg.selectAll(".node")
-            .data(graph.nodes)
-            .enter().append("circle")
-            .attr("class", "node")
-            .attr("r", function(d){ return d.selected ? 7 : 5; })
-            .style("fill", function (d) { return color(d.group); })
-            .call(force.drag)
-            .on("mouseover", function(d) {
-                tooltip.html(showLongFileNames ? d.name : dropPath(d.name))
-                        .style("opacity", .9)
-                        .style("position", "absolute")
-                        .style("left", svgPos.left + parseInt(d.x + 18) + "px")
-                        .style("top", svgPos.top + parseInt(d.y - 12) + "px");
-            })
-            .on("mouseout", function(d) {
-                tooltip.style("opacity", .0);
-            })
-            .on("click", function (node) {
-                var shouldRemoveNode = d3.event.altKey;
-                if (shouldRemoveNode) {
-                    updateSelection([], showLongFileNames);
-                    tooltip.style("opacity", .0);
+    var onMouseOverNode = function (d) {
+        tooltip.html(showLongFileNames ? d.name : dropPath(d.name))
+                .style("opacity", .9)
+                .style("position", "absolute")
+                .style("left", svgPos.left + parseInt(d.x + 18) + "px")
+                .style("top", svgPos.top + parseInt(d.y - 12) + "px");
+    };
+    var onMouseOutOfNode = function (d) {
+        tooltip.style("opacity", .0);
+    };
+    var whenClickedOnNode = function (node) {
+        var shouldRemoveNode = d3.event.altKey;
+        if (shouldRemoveNode) {
+            updateSelection([], showLongFileNames);
+            tooltip.style("opacity", .0);
 
-                    graphEditor.removeAll([node]);
+            graphEditor.removeAll([node]);
 
-                    svg.selectAll(".node").data(graph.nodes).exit().remove();
-                    svg.selectAll(".link").data(graph.links).exit().remove();
-                    force.nodes(graph.nodes).links(graph.links).start();
+            svg.selectAll(".node").data(graph.nodes).exit().remove();
+            svg.selectAll(".link").data(graph.links).exit().remove();
+            force.nodes(graph.nodes).links(graph.links).start();
 
-                } else {
-                    updateSelection(graphEditor.nodesConnectedTo(node), showLongFileNames);
-                }
+        } else {
+            updateSelection(graphEditor.nodesConnectedTo(node), showLongFileNames);
+        }
 
-                handledByNode = true;
-            });
+        handledByNode = true;
+    };
+    var nodeElements = updateNodes(svg, graph, onMouseOverNode, onMouseOutOfNode, whenClickedOnNode);
+
     svg.on("click", function () {
         if (handledByNode) {
             handledByNode = false;
@@ -337,18 +332,26 @@ function createForcesGraphOn(elementId, graph) {
         graphEditor.removeAll(nodesInClustersSmallerThan(+this.value));
 
         linkElements = updateLinks(svg, graph);
-
-        svg.selectAll(".node").data(graph.nodes).enter().append("circle")
-                .attr("class", "node")
-                .attr("r", function(d){ return d.selected ? 7 : 5; })
-                .style("fill", function (d) { return color(d.group); })
-                .call(force.drag);
-        svg.selectAll(".node").data(graph.nodes).exit().remove();
-        nodeElements = svg.selectAll(".node");
+        nodeElements = updateNodes(svg, graph, onMouseOverNode, onMouseOutOfNode, whenClickedOnNode);
 
         force.nodes(graph.nodes).links(graph.links).start();
     });
 
+
+    function updateNodes(svg, graph, onMouseOverNode, onMouseOutOfNode, whenClickedOnNode) {
+        svg.selectAll(".node")
+                .data(graph.nodes)
+                .enter().append("circle")
+                .attr("class", "node")
+                .attr("r", function(d){ return d.selected ? 7 : 5; })
+                .style("fill", function (d) { return color(d.group); })
+                .call(force.drag)
+                .on("mouseover", onMouseOverNode)
+                .on("mouseout", onMouseOutOfNode)
+                .on("click", whenClickedOnNode);
+        svg.selectAll(".node").data(graph.nodes).exit().remove();
+        return svg.selectAll(".node");
+    }
 
     function updateLinks(svg, graph) {
         svg.selectAll(".link")
